<resources>
    <string name="app_name">Cricket Gear</string>
    <string name="second_page">This is my second Activity</string>
    <string name="toast_msg">Welcome To Water Camp</string>
    <string name="enter_Email">Enter Email ID</string>
    <string name="title_activity_dashboard">Cricket Gear</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_call">Call</string>
    <string name="action_log_out">Logout</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="map">Map</string>
    <string name="menu_call">Call</string>
    <string name="menu_aboutUS">About us</string>
    <string name="cricket_gear">Cricket Gear</string>
    <string name="menu_send">Send</string>
    <string name="action_cart">Cart</string>
    <string name="cricket_bat">Bat</string>
    <string name="cricket_variant">New Arrival</string>
    <string name="cricket_stump">Stump</string>
    <string name="cricket_pad">Pad</string>
    <string name="cricket_gloves">Glove</string>
    <string name="cricket_helmet">Helmet</string>
    <string name="cricket_plastic">Plastic</string>
    <string name="cricket_tennis">Tennis</string>
    <string name="cricket_tennis_green">Green Tennis</string>
    <string name="cricket_tennis_red">Red Tennis</string>
    <string name="cricket_deuce">Deuce</string>
    <string name="action_order">My Orders</string>
    <string name="action_wishlist">My Wishlist</string>
    <string name="action_account">My Account</string>
</resources>
