<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <item
            android:id="@+id/bat_plastic"

            android:name="@string/cricket_plastic"

        />

        <item
            android:id="@+id/bat_tennis"

            android:name="@string/cricket_tennis">

            <menu>
                <item
                    android:id="@+id/bat_tennis_green"

                    android:name="@string/cricket_tennis_green"/>
                <item
                    android:id="@+id/bat_tennis_red"

                    android:name="@string/cricket_tennis_red"/>

            </menu>
        </item>


        <item
            android:id="@+id/bat_deuce"
            android:icon="@drawable/ic_menu_call"
            android:name="@string/cricket_deuce" />

</menu>