<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/action_order"
            android:title="@string/action_order"
            android:icon="@drawable/ic_order_black_24dp"
            />
        <item
            android:id="@+id/action_cart"
            android:title="@string/action_order"
            android:icon="@drawable/ic_shopping_cart"
            />
        <item
            android:id="@+id/action_wishlist"
            android:title="@string/action_wishlist"
            android:icon="@drawable/ic_favorite_black_24dp"
            />
        <item
            android:id="@+id/action_account"
            android:title="@string/action_account"
            android:icon="@drawable/ic_account_circle_black_user_24dp"
            />
        <item
            android:id="@+id/action_schedule"
            android:title="Schedule Order"
            android:icon="@drawable/ic_access_clock_black_24dp"
            />


    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_call"
                android:icon="@drawable/ic_menu_call"
                android:title="@string/menu_call" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_launcher_about"
                android:title="@string/menu_aboutUS" />


            <item
                android:id="@+id/nav_map"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/map" />
        </menu>
    </item>

</menu>
